--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
   background-color: #2E9CDB; /* Slightly darker shade for hover effect */
   border-color: #2E9CDB;
 }
-
+/* 
 .code {
   background-color: #36D7B7;
   border-color: #36D7B7;
@@ -157,4 +157,4 @@
 .gray{
   background: #EAEAEA;
   color: #676767;
-}
+} */
